# scrap-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  crap4rs.toml  deny.toml  lefthook.yml  scrap.example.toml  scrap.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/scrap-core/: Cargo.toml
crates/scrap-core/src/: adapter_meta.rs  lib.rs
crates/scrap-core/src/adapters/: mod.rs
crates/scrap-core/src/adapters/reporters/: github_annotations.rs  json.rs  markdown.rs  mod.rs  stdout.rs  table.rs
crates/scrap-core/src/adapters/reporters/sarif/: constants.rs  mod.rs
crates/scrap-core/src/adapters/reporters/snapshots/: scrap_core__adapters__reporters__markdown__tests__snapshot_empty_report.snap  scrap_core__adapters__reporters__markdown__tests__snapshot_full_report.snap  scrap_core__adapters__reporters__markdown__tests__snapshot_view_shaped_top_one_only_failing.snap  scrap_core__adapters__reporters__table__tests__snapshot_finding_grouping_default_options_no_color.snap  (+1 more)
crates/scrap-core/src/adapters/source/: fs.rs  memory.rs  mod.rs
crates/scrap-core/src/cli/: config.rs  dispatch.rs  error.rs  init.rs  mod.rs
crates/scrap-core/src/cli/snapshots/: scrap_core__cli__config__tests__unknown_field_error_message_snapshot.snap
crates/scrap-core/src/core/: mod.rs
crates/scrap-core/src/detectors/: large_example.rs  mod.rs  no_op_io.rs  surface_only_io.rs  tautological_assertion.rs  zero_assertion.rs
crates/scrap-core/src/domain/: assertion_sources.rs  behavioral_fact.rs  config.rs  finding.rs  literal_value.rs  mod.rs  opt_outs.rs  parsed.rs  report.rs  smell.rs  source.rs  threshold.rs  types.rs
crates/scrap-core/src/ports/: mod.rs  parser.rs  source.rs
crates/scrap-core/templates/: markdown_report.txt
crates/scrap-core/tests/: cucumber.rs  detectors_zero_assertion.rs  sarif_snapshot.rs  source_walker.rs  wire_envelope_snapshot.rs
crates/scrap-core/tests/cucumber_steps/: cli.rs  config.rs  detectors_zero_assertion.rs  json_reporter.rs  no_op_io.rs  sarif_reporter.rs  table_reporter.rs  tautological.rs
crates/scrap-core/tests/features/: cli_dispatch.feature  cli_init.feature  config.feature  detectors_zero_assertion.feature  file_walker.feature  json_reporter.feature  no_op_io.feature  sarif_reporter.feature  table_reporter.feature  tautological_assertion.feature
crates/scrap-core/tests/snapshots/: detectors_zero_assertion__positive_finding.snap  sarif_snapshot__sarif_v2_1_0.snap  wire_envelope_snapshot__envelope_v01.snap  wire_envelope_snapshot__report_v01.snap
crates/scrap-examples/: Cargo.toml  README.md
crates/scrap-examples/examples/large_example/: README.md  bad.rs  expected.json  good.rs
crates/scrap-examples/examples/no_op_io/: README.md  bad.rs  expected.json  good.rs
crates/scrap-examples/examples/surface_only_io/: README.md  bad.rs  expected.json  good.rs
crates/scrap-examples/examples/tautological_assertion/: README.md  bad.rs  expected.json  good.rs
crates/scrap-examples/examples/zero_assertion/: README.md  bad.rs  expected.json  good.rs
crates/scrap-examples/src/: lib.rs
crates/scrap-examples/tests/: snapshots.rs
crates/scrap4rs/: Cargo.toml  build.rs  scrap4rs.toml
crates/scrap4rs/src/: lib.rs  main.rs
crates/scrap4rs/src/cli/: mod.rs
crates/scrap4rs/src/core/: mod.rs
crates/scrap4rs/src/domain/: classification.rs  finding.rs  mod.rs  report.rs  smell.rs  threshold.rs  types.rs
crates/scrap4rs/src/parser/: assertions.rs  attributes.rs  body.rs  mod.rs  spans.rs  tautology.rs  visitor.rs
crates/scrap4rs/src/ports/: mod.rs
crates/scrap4rs/tests/: cucumber.rs  detectors_no_op_io_e2e.rs  detectors_surface_only_io_e2e.rs  detectors_tautological_assertion_e2e.rs  detectors_zero_assertion_e2e.rs  example_config_sync.rs  parser_props.rs  parser_snapshots.rs  parser_surface.rs  self_check.rs  wire_envelope_snapshot.rs  wire_real_name.rs
crates/scrap4rs/tests/features/: parser.feature
crates/scrap4rs/tests/fixtures/: attribute_variants.rs  nested_mods.rs
crates/scrap4rs/tests/fixtures/behavioral_facts/: expect_chain.rs  expect_err_chain.rs  unwrap_chain.rs  unwrap_err_chain.rs
crates/scrap4rs/tests/fixtures/error_recovery/: malformed_attribute.rs  unclosed_brace.rs
crates/scrap4rs/tests/fixtures/opt_outs/: allows.rs
crates/scrap4rs/tests/fixtures/runner_shells/: cucumber_shell.rs  insta_shell.rs  kani_shell.rs  no_op_io_unit_binding.rs  pretty_assertions_shell.rs  proptest_macro_suffix.rs  proptest_shell.rs  quickcheck_shell.rs  should_panic_shell.rs  tautological_inside_proptest.rs  trybuild_shell.rs
crates/scrap4rs/tests/fixtures/true_positives/: no_op_io.rs  tautological.rs  tautological_assert_ne.rs  tautological_with_should_panic.rs  zero_assertion.rs
crates/scrap4rs/tests/snapshots/: parser_snapshots__snapshot_attribute_variants.snap  parser_snapshots__snapshot_cucumber_shell.snap  parser_snapshots__snapshot_error_recovery_malformed_attribute.snap  parser_snapshots__snapshot_error_recovery_unclosed_brace.snap  parser_snapshots__snapshot_expect_chain.snap  parser_snapshots__snapshot_expect_err_chain.snap  parser_snapshots__snapshot_insta_shell.snap  parser_snapshots__snapshot_kani_shell.snap  parser_snapshots__snapshot_nested_mods.snap  parser_snapshots__snapshot_opt_outs.snap  parser_snapshots__snapshot_pretty_assertions_shell.snap  parser_snapshots__snapshot_proptest_macro_suffix.snap  parser_snapshots__snapshot_proptest_shell.snap  parser_snapshots__snapshot_quickcheck_shell.snap  parser_snapshots__snapshot_should_panic_shell.snap  parser_snapshots__snapshot_tautological.snap  parser_snapshots__snapshot_tautological_assert_ne.snap  parser_snapshots__snapshot_tautological_inside_proptest.snap  parser_snapshots__snapshot_tautological_with_should_panic.snap  parser_snapshots__snapshot_trybuild_shell.snap  parser_snapshots__snapshot_unwrap_chain.snap  parser_snapshots__snapshot_unwrap_err_chain.snap  parser_snapshots__snapshot_zero_assertion.snap  wire_envelope_snapshot__report_v01.snap
scripts/: coverage-parser.sh
(+1 files in other folders)
