[workspace]
members = ["crates/scrap-core", "crates/scrap4rs", "crates/scrap-examples"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/breezy-bays-labs/scrap-rs"
homepage = "https://github.com/breezy-bays-labs/scrap-rs"
authors = ["Christopher Bays <cmbays@breezybayslabs.com>"]
rust-version = "1.93"

# Centralized dep versions. Front-loaded so detector PRs (P13–P17),
# port-trait PRs (#5), and the eventual scrap4ts adapter all consume
# shared deps via `{ workspace = true }` rather than drifting per-crate
# version pins. New shared deps land here; per-crate Cargo.toml lists
# the dep without pinning a version.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
insta = { version = "1", features = ["json", "yaml"] }
proptest = "1"
thiserror = "2"
globset = "0.4"
ignore = "0.4"
static_assertions = "1"
tempfile = "3"
# `toml` powers the project-level config schema loader at
# `crates/scrap-core/src/cli/config.rs` (lands with scrap-rs#18).
# Version 1.x ships the `toml::Spanned<T>` API the loader uses
# to attach `<file>:<line>` context to invalid-glob errors
# (subsumes scrap-rs#34). MSRV 1.85 ≤ workspace MSRV 1.93 —
# compatible. `serde_spanned`'s `Spanned<T>` is re-exported as
# `toml::Spanned` per toml 1.x convention. scrap4ts (v0.6+) will
# inherit the same loader from scrap-core; no per-adapter dep
# duplication.
toml = "1"
# `cucumber` runs the .feature behavioral contract at
# `crates/scrap-core/tests/features/file_walker.feature`. Pin lifted
# from earlier 0.21 ceiling now that workspace MSRV is 1.93.
cucumber = "0.23"
# `tokio` powers the cucumber harness's async runtime
# (cucumber 0.23 exposes only async run_and_exit). Used solely
# inside `crates/scrap-core/tests/cucumber.rs` via
# `#[tokio::main(flavor = "current_thread")]` — no parking_lot
# inside step defs, so the 2026-04-26 cucumber+parking_lot
# deadlock vector does not apply.
tokio = { version = "1", features = ["macros", "rt"] }
# `comfy-table` powers the terminal table reporter at
# `crates/scrap-core/src/adapters/reporters/table.rs` (scrap-rs#16).
# `"7"` resolves as `^7.0.0` per Cargo SemVer rules — accepts any
# minor or patch bump within major 7. Snapshot stability does NOT
# rely on this pin; it relies on D-SNAP-1 interactive re-bless
# discipline (`cargo insta review` — NEVER blind accept) on every
# comfy-table bump, including minors. House style is `^N`-style
# elsewhere (`serde = { version = "1" }`); kept consistent here.
# Allowed dep per AGENTS.md scrap-core deps table.
comfy-table = "7"
# `syn` powers the Rust-source parser adapter in scrap4rs (lands
# with scrap-rs#12). Confined to `crates/scrap4rs/` per
# adr-hexagonal-layout; `scrap-core` stays AST-pure (ast-purity CI
# grep enforces). Features: `parsing` + `full` (parse_file + item
# / expr / stmt grammar coverage), `visit` (the Visit<'ast> trait
# the walker implements), `extra-traits` (Debug derives for syn
# types — helpful in tests and debugging).
syn = { version = "2", features = ["full", "parsing", "visit", "extra-traits"] }
# `proc-macro2` is a transitive dep of `syn`; pinned explicitly here
# with the `span-locations` feature, which is REQUIRED for the
# parser's span extraction. `proc_macro2::Span::start()` / `Span::end()`
# return a meaningful `LineColumn` only under
# `#[cfg(span_locations)]`; without this feature, every span line
# collapses to 0 and downstream snapshots become garbage.
# scrap4ts will inherit the same feature when it joins (v0.6+).
proc-macro2 = { version = "1", features = ["span-locations"] }
# `quote` provides the `ToTokens` trait used by `parser/attributes.rs`
# (`parsed_attribute_from_syn` projects `Meta::NameValue` via
# `value.to_token_stream().to_string()` for the `raw` field's
# verbatim source-byte fidelity). The `quote!(...)` macro is NOT
# used — path stringification stays hand-rolled (no whitespace
# injection). scrap-rs#12 S1.1 plan revision item 7 was
# over-aggressive about dropping this; restored here in S2.1.
quote = "1"

# ─── Workspace lints (item 20 — lifted from per-crate #![warn(...)]) ───
#
# Lifted at scrap-rs#12 S1.1 so scrap-core and scrap4rs share a single
# lint policy block and scrap4ts inherits cleanly at v0.6+ join. Each
# crate's `Cargo.toml` adds `[lints] workspace = true` and the
# previously-per-crate `#![warn(clippy::pedantic, clippy::cargo)]`
# headers come out of `crates/*/src/lib.rs`.
[workspace.lints.rust]
# Reserved — kept as an empty namespace so scrap4ts inherits at join.
# Future rust-lint policy lifts land here (e.g. `unsafe_code = "forbid"`
# once the policy is workspace-wide rather than crate-by-crate).

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
