[package]
name = "scrap-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Language-agnostic core for the scrap test-smell detector — domain types, port traits, detectors, reporters, CLI surface. Shared by every adapter binary in the workspace (scrap4rs, scrap4ts)."
keywords = ["scrap", "testing", "quality", "static-analysis", "smell"]
categories = ["development-tools::testing"]
readme = "../../README.md"
rust-version.workspace = true

# scrap-core is the language-agnostic library shared by every adapter
# binary in the workspace. Per the hexagonal layering ADR
# (`ops/decisions/scrap4rs/adr-hexagonal-layout.md`), this crate must
# never depend on AST libraries — `syn`, `swc_*`, `oxc_*`,
# `tree-sitter*`, `proc-macro2`, `quote`. The parser adapter for each
# source language lives in its own adapter crate (scrap4rs for Rust
# via syn, scrap4ts for TypeScript via swc/oxc). cargo-deny enforces
# the rule transitively in `deny.toml`.

[lib]
name = "scrap_core"
path = "src/lib.rs"

[dependencies]
# Domain (de)serialization. No `serde-on-AST`: serde lives in
# `domain/` only because wire shapes need to round-trip identically
# across adapter binaries. Shared version via `[workspace.dependencies]`.
serde = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
