[package]
name = "scrap-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Language-agnostic core for the scrap test-smell detector — domain types, port traits, detectors, reporters, CLI surface. Shared by every adapter binary in the workspace (scrap4rs, scrap4ts)."
keywords = ["scrap", "testing", "quality", "static-analysis", "smell"]
categories = ["development-tools::testing"]
readme = "../../README.md"
rust-version.workspace = true

# scrap-core is the language-agnostic library shared by every adapter
# binary in the workspace. Per the hexagonal layering ADR
# (`ops/decisions/scrap4rs/adr-hexagonal-layout.md`), this crate must
# never depend on AST libraries — `syn`, `swc_*`, `oxc_*`,
# `tree-sitter*`, `proc-macro2`, `quote`. The parser adapter for each
# source language lives in its own adapter crate (scrap4rs for Rust
# via syn, scrap4ts for TypeScript via swc/oxc). cargo-deny enforces
# the rule transitively in `deny.toml`.

[lib]
name = "scrap_core"
path = "src/lib.rs"

[dependencies]
# Domain (de)serialization. No `serde-on-AST`: serde lives in
# `domain/` only because wire shapes need to round-trip identically
# across adapter binaries. Shared version via `[workspace.dependencies]`.
serde = { workspace = true }
# Per-port error enums (`SourceError`, `ParseError`) derive `thiserror::Error`
# so adapter callers get `std::error::Error` with `#[source]` chaining
# without hand-rolled boilerplate.
thiserror = { workspace = true }
# `SourceError::InvalidGlob` carries the underlying `globset::Error` via
# `#[source]`. Pulled into `scrap-core` because globset is on the allowed
# dep list (CLAUDE.md) and the error type itself is part of the port surface.
globset = { workspace = true }
# `ignore` powers the `FsWalker` adapter (`adapters/source/fs.rs`):
# `WalkBuilder` for tree traversal, `OverrideBuilder` for user-glob
# negative matchers. `SourceError::Ignore` carries the underlying
# `ignore::Error` via `#[source]` for `OverrideBuilder::build()` setup
# failures (rare; forward-compat hatch).
ignore = { workspace = true }
# `toml` powers the project-level config loader at `cli/config.rs`
# (lands with scrap-rs#18). `toml::Spanned<String>` carries byte
# offsets used by the loader's `validate_raw_config` pass to attach
# `<file>:<line>` context to `ConfigError::InvalidGlob` (subsumes
# scrap-rs#34). scrap4ts (v0.6+) inherits this loader unchanged.
toml = { workspace = true }
# `serde_json` powers the JSON envelope reporter at
# `adapters/reporters/json.rs` (scrap-rs#14). `serde_json::to_writer_pretty`
# emits the v0.1 envelope; `serde_json::Error` is the reporter's return
# type (wraps writer I/O errors via `Error::io`). Promoted from
# dev-dependencies in scrap-rs#14 — was only used by snapshot tests
# until the reporter landed.
serde_json = { workspace = true }
# `comfy-table` powers the terminal table reporter at
# `adapters/reporters/table.rs` (scrap-rs#16). Allowed dep per
# AGENTS.md scrap-core deps table. Shared version via
# `[workspace.dependencies]`.
comfy-table = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
# Compile-time `assert_obj_safe!` smoke checks for port traits — fails to
# compile if a future edit introduces a non-object-safe method (e.g. `Self: Sized`,
# generic methods, `&mut self` requirement on a port trait).
static_assertions = { workspace = true }
# `tempfile::TempDir` powers the FsWalker integration tests in
# `adapters/source/fs.rs` — each walk scenario builds a self-contained
# fixture tree under a TempDir that is dropped at end of test.
tempfile = { workspace = true }
# `cucumber` executes the .feature behavioral contract for the file
# walker. The harness lives at `tests/cucumber.rs` (declared with
# `harness = false` below so cucumber-rs owns the test runner end to
# end); scenarios live at `tests/features/file_walker.feature`.
cucumber = { workspace = true }
# `tokio` is the async runtime for the cucumber harness only — not
# used by the library itself.
tokio = { workspace = true }

[[test]]
name = "cucumber"
harness = false

[lints]
# Inherits clippy::pedantic + clippy::cargo from the workspace
# `[workspace.lints.clippy]` block — lifted from the per-crate
# `#![warn(...)]` headers at scrap-rs#12 S1.1 so scrap4ts can inherit
# cleanly at v0.6+ join.
workspace = true
