[package]
name = "scrap4rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Static test smell detector for Rust — finds zero-assertion, tautological, no-op, and surface-only test bodies. Rust-source adapter for the scrap-core analyzer."
keywords = ["scrap", "testing", "quality", "static-analysis", "smell"]
categories = ["development-tools::testing", "command-line-utilities"]
readme = "../../README.md"
rust-version.workspace = true

# Binstall metadata is intentionally not wired during v0.x — see ops
# kickstart plan §3 for the no-release-until-v1.0 policy. When v1.0
# lands, mirror crap4rs's [package.metadata.binstall] block.

[lib]
name = "scrap4rs"
path = "src/lib.rs"

[[bin]]
name = "scrap4rs"
path = "src/main.rs"

[dependencies]
# Language-agnostic core — domain types, port traits, detectors,
# reporters, CLI surface. scrap4rs adds only the Rust-specific parser
# adapter (lands with scrap-rs#5 via syn/proc-macro2/quote).
scrap-core = { path = "../scrap-core", version = "0.1.0" }
